# AirAware

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AIRAWARE_SYSTEM_OVERVIEW.md  CHECKPOINT_VERIFICATION_REPORT.md  CONTRIBUTORS_LOG.md  CP10_API_UI_SUMMARY.md  CP11_AGENTS_SUMMARY.md  CP7_DEEP_MODELS_FIX_REPORT.md  CP9_SUMMARY.md  Dockerfile  Dockerfile.dev  README.md  README_DOCKER.md  docker-compose.dev.yml  docker-compose.yml  imerg_sample.hdf5  mkdocs.yml  pyproject.toml  requirements.txt  test_era5.nc
airaware/: __init__.py
airaware/agents/: __init__.py  base_agent.py  data_agent.py  forecast_agent.py  health_agent.py  notification_agent.py  orchestrator.py
airaware/api/: __init__.py  agent_service.py  app.py  cross_station_service.py  models.py  services.py
airaware/baselines/: __init__.py  arima_baseline.py  baseline_ensemble.py  dynamic_ensemble.py  probabilistic_forecasting.py  prophet_baseline.py  seasonal_naive.py
airaware/calibration/: __init__.py  adaptive_conformal.py  calibration_enhancements.py  calibration_utils.py  conformal_predictor.py  ensemble_calibration.py  quantile_calibration.py
airaware/config/: __init__.py  environments.py  loader.py  models.py  validation.py  versioning.py
airaware/data_pipeline/: __init__.py  auto_updater.py
airaware/deep_models/: __init__.py  data_preprocessor.py  deep_ensemble.py  model_trainer.py  patchtst.py  tft.py
airaware/etl/: __init__.py  circuit_breaker.py  data_completeness.py  data_validator.py  era5_etl.py  error_recovery.py  imerg_etl.py  lineage_tracker.py  manifest_manager.py  met_data_validator.py  openaq_etl.py  performance_optimizer.py  quality_monitor.py
airaware/evaluation/: __init__.py  metrics.py  (+5 more)
configs/: app.yaml  data.yaml
data/: health_guidelines.json
docs/: algorithms.md  architecture.md  codebase.md  index.md  techstack.md  workflow.md
scripts/: agents_cli.py  alternative_pm25_sources.py  baseline_evaluation_cli.py  calibration_cli.py  calibration_enhancements_cli.py  choose_stations.py  collect_extended_data.py  comprehensive_pm25_collector.py  config_manager.py  deep_models_cli.py  demo_etl.py  docker_helper.sh  docker_patch_commits.sh  dynamic_ensemble_cli.py  enhanced_cp6_cli.py  enhanced_etl_demo.py  enhanced_feature_engineering_cli.py  enhanced_pm25_generator.py  enhanced_prophet_cli.py  ensemble_backtest_cli.py  era5_etl_cli.py  etl_health_dashboard.py  explainability_cli.py  extended_data_collection.py  feature_engineering_cli.py  fix_station_timestamps.py  git_batch_push.sh  imerg_etl_cli.py  nasa_earthdata_pm25_etl.py  openaq_etl_cli.py  optimize_station_distribution.py  probabilistic_forecasting_cli.py  quick_enhanced_evaluation.py  residual_analysis_cli.py  rolling_cv_cli.py  start_airaware.py  start_api.py  start_ui.py  test_cp3_enhancements.py  unified_etl_cli.py  (+2 more)
tests/: __init__.py  test_data_scanner.py  test_era5_etl.py  test_imerg_etl.py  test_smoke.py
(+352 files in other folders)
